# SILC

./: .gitignore  CMakeLists.txt  README.md
docs/: design.md
include/: codegen.h  lexer.h  parser.h  semantic.h
src/: codegen.c  lexer.c  main.c  parser.c  semantic.c
test/: test.cor
tests/: test.cor  test_codegen.c  test_lexer.c  test_parser.c
